--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,21 @@
     padding: 0;
     font-family: "Roboto";
 }
-section nav{
+nav{
+    position: fixed;
     text-align: right;
     text-transform: uppercase;
-    padding:20px 50px;
+    padding:20px 0px;
+    width: 100%;
+    background-color: #EE7330;
 }
-section nav a{
+nav a{
     text-decoration: none;
     padding: 0 20px;
     font-weight: bold;
     color: black;
     transition: 0.5s;
 }
-section nav a:hover{
+nav a:hover{
     color: #10C9C3
 }
