--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
     display: block;
     clear: both;
 }
+body{
+    overflow-x: hidden;
+}
 nav{
     /* position: fixed; */
     text-align: right;
@@ -160,11 +163,8 @@ nav a:hover{
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+    overflow-x: hidden;
 }
-/* .gallery div{
-    display: flex;
-    flex-wrap: wrap;
-} */
 .gallery img{
     justify-content: center; 
     align-items: center; 
@@ -173,6 +173,7 @@ nav a:hover{
     flex-shrink: 1;
     width: 25%;
     height: 45%;
+    overflow-x: hidden;
 }
 .gallery p{
     height: 10%;
@@ -186,8 +187,81 @@ nav a:hover{
 .gallery p:hover{
     font-size:1.1em;
 }
+
 .video{
-    
+    width: 100%;
+    height: 80vh;
+    margin: 0 auto;
+    text-align: center;
+}
+.video p{
+    margin-top: 5%;
+    height: 10%;
+    font-size: 1.75em;
+    font-weight: bold;
+}
+.video span{
+    height: calc(70% - 7% - 10%);
+    font-size: 0.75em;
+    width: 55%;
+    color: gray;
+    padding-bottom: 5%;
+}
+.video video{
+    margin-top: 5%;
+    width: 60%;
+    height: 70%;
+
+}
+
+.form{
+    height: 80vh;
+    background-color: #EEE;
+    text-align: center;
+}
+.form p{
+    padding-top: 3%;
+    padding-bottom: 3%;
+    font-size: 2em;
+}
+.form span{
+    margin: 0 auto;
+    font-size: 1.5em;
+    display: block;
+    width: 50%;
+}
+.form form{
+    width: 60%;
+    margin: 0 auto;
+
+}
+.form form .short{
+
+    padding: 5px 10px ;
+    width: 40%;
+    margin-top: 5%;
+    margin-bottom: 4%;
+    /* margin-right: (90% - 50%); */
+    border: none;
+    outline: none;
+}
+.form form .long{
+    width: 100%;
+    padding: 5px 10px ;
+    border: none;
+    outline: none;
+    margin-bottom: 4%;
+}
+.form form textarea{
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 5px 10px;
+}
+.form ::placeholder{
+    color: black;
+    font-weight: bold;
+    font-size: 0.8em;
 }
 /*po kliknięciu img pojawia się popup ze sliderem (zastosować lightboxa) */
 /* testy funkcjonalbne
